[package]
name = "wcookie"
version = "0.1.3"
edition = "2021"
authors = ["Juan Cáceres <cacexp@gmail.com>"]
license = "Apache-2.0"
readme="README.md"
description = "wcookie represents the cookie set by a HTTP server written in Rust."
homepage = "https://github.com/cacexp/wcookie"
repository = "https://github.com/cacexp/wcookie"
documentation = "https://docs.rs/wcookie/"
categories = ["network-programming", "web-programming::http-client"]
# Ignore files used in tests


[dependencies]
regex = "1.10.2"
chrono = "0.4.31"
lazy_static = "1.4.0"

[dev-dependencies]

